--- a/src/app/common/components/products-catalog-page/products-catalog-page.module.css
+++ b/src/app/common/components/products-catalog-page/products-catalog-page.module.css
@@ -1,11 +1,12 @@
 .block{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding-left: 15px;
     flex-wrap: wrap;
     width: 100%;
     
 }
 .card{
+    flex-basis: 33.3%;
     margin-bottom: 15px;
 }
