--- a/src/index.css
+++ b/src/index.css
@@ -445,15 +445,15 @@ font-weight: 700;
 }
 
 .card {
+  position: relative;
   padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  max-width: 255px;
+  width: 255px;
   max-height: 450px;
   border-radius: 9px;
-  
   background-color:rgba(255, 255, 255, 1);
 
   border: none;
@@ -471,6 +471,8 @@ margin: 15px 0;
 padding: 0 27px;
 }
 .card_price {
+  padding: 0 30px;
+  width: 100%;
   font-family: Trebuchet MS;
 font-size: 21px;
 font-weight: 700;
@@ -775,13 +777,23 @@ html{
 }
 .pop-up_container{
   width: 100%;
-  margin: 0 170px;
-  margin-top: 150px;
-  border: 2px solid red;
+  margin: 0 200px;
+  margin-top: 66px;
   background: rgba(255, 251, 248, 1);
   box-shadow: 5px 6px 15px 0px rgba(251, 121, 27, 0.63);
+  
 }
 
+.pop-up_catalog_left_categories{
+  display: flex;
+  justify-content: space-between;
+  align-items: first baseline;
+  cursor: pointer;
+}
+
+.pop-up_catalog_left_categories:hover .links{
+  color:rgba(249, 164, 63, 1) ;
+}
 .pop-up_modal_active{
   z-index: 5000;
 }
@@ -789,8 +801,7 @@ html{
   font-family: Trebuchet MS;
 font-size: 16px;
 font-weight: 700;
-
-  flex-basis: 20%;
+  flex-basis: 25%;
   display: flex;
   flex-direction: column;
   border-right: 2px solid rgba(42, 42, 42, 0.26);
@@ -798,6 +809,42 @@ font-weight: 700;
 .pop-up_catalog_container{
   padding:  15px 25px;
 
+}
+.card_sale{
+  padding-top: 1px;
+  font-family: Open Sans;
+font-size: 16px;
+font-weight: 600;
+color: rgba(255, 255, 255, 1);
+  position: absolute;
+  width: 69px;
+height: 29px;
+top: 10px;
+right: 10px;
+gap: 0px;
+border-radius: 14px;
+opacity: 0px;
+background: rgba(249, 164, 63, 1);
+text-align: center;
+}
+.card_sale_price_block{
+  padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.card_sale_price_block p{
+}
+.card_sale_price{
+  position: relative;
+}
+.card_sale_price:before {
+	content: "";
+	border-bottom: 3px solid black;
+	position: absolute;
+	width: 100%;
+	height: 50%;
+	transform: rotate(-12deg);
 }
 .pop-up_catalog_container_border{
   border-bottom: 2px solid rgba(42, 42, 42, 0.26);
@@ -811,6 +858,13 @@ font-weight: 700;
 .pop-up_catalog_left_bottom{
   display: flex;
   flex-direction: column;
+  gap: 10px;
+}
+.pop-up_catalog_left_categories_link{
+  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: first baseline;
 }
 .pop-up_catalog_left_bottom span{
   margin-bottom: 10px;
@@ -837,3 +891,32 @@ font-weight: 700;
   width: 193px;
   height: 168px;
 }
+.pop-ups_catalog_right{
+  width: 100%;
+}
+.pop-ups_catalog_right_container{
+  height: 100%;
+  padding: 60px 30px;
+}
+.pop-ups_catalog_right_block{
+  display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
+}
+.pop-ups_catalog_right_item{
+  font-family: Trebuchet MS;
+  font-size: 16px;
+  font-weight: 700;
+  flex-basis: 33.3%;
+  margin-bottom: 20px;
+  cursor: pointer;
+
+}
+.pop-ups_catalog_right_item:hover{
+  color:rgba(249, 164, 63, 1) ;
+}
+.pop-up_catalog_left_top_link:hover {
+  color:rgba(249, 164, 63, 1) ;
+}
+
+
