--- a/src/app/common/components/products-catalog-page/products-catalog-page.module.css
+++ b/src/app/common/components/products-catalog-page/products-catalog-page.module.css
@@ -10,3 +10,14 @@
     flex-basis: 33.3%;
     margin-bottom: 15px;
 }
+
+.notProduct{
+    display: flex;
+    justify-content: center;
+    font-family: Trebuchet MS;
+    font-size: 19px;
+    font-weight: 700;
+    line-height: 22.06px;
+    text-align: left;
+    width: 100%;
+}
