--- a/src/index.css
+++ b/src/index.css
@@ -200,7 +200,7 @@ font-weight: 700;
 }
 .button-gradient:hover {
   border: 2px solid #F9A43F;;
-  color: #F9A43F;;
+  color: #F9A43F;
   font-family: "Trebuchet MS";
   font-style: normal;
   font-weight: 700;
@@ -233,6 +233,7 @@ font-weight: 700;
   
 }
 .main_container{
+  width: 1100px;
   max-width: 1100px;
 }
 .main_container_bg{
@@ -284,7 +285,6 @@ margin-bottom: 20px;
    font-family: Trebuchet MS;
 font-size: 16px;
 font-weight: 700;
-box-shadow: 5px 6px 16px 0px rgba(42, 42, 42, 0.16);
 
 
 
@@ -485,6 +485,10 @@ font-weight: 700;
 text-align: center;
 margin: 15px 0;
 padding: 0 27px;
+}
+.card_text:hover{
+  color: #F9A43F;
+  cursor: pointer;
 }
 .card_price {
   padding: 0 30px;
@@ -894,6 +898,7 @@ font-weight: 700;
   background-color: #f1eeea;
   margin-top: 120px;
   padding-top: 70px;
+  width: 100%;
 }
 .catalog_page_block{
   width: 100%;
@@ -902,6 +907,7 @@ font-weight: 700;
 }
 
 .card_image{
+  cursor: pointer;
   margin-bottom: 10px;
   width: 193px;
   height: 168px;
@@ -934,4 +940,51 @@ font-weight: 700;
   color:rgba(249, 164, 63, 1) ;
 }
 
+.header_top_container_bg{
+  width: 100%;
+  background:#2A2A2A;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header_container_top{
+  width: 1100px;
+}
+.header_bottom_container_bg{
+  width: 100%;
+  background-color: #f1eeea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 5px 6px 16px 0px rgba(42, 42, 42, 0.16);
+}
+.header_container_bottom{
+  width: 1100px;
+}
 
+.header_top_icons_profile_basket{
+  position: relative;
+}
+.circle_on_basket{
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  gap: 0px;
+  opacity: 0px;
+  top: -8px;
+  right: 0;
+  background: rgba(249, 164, 63, 1);
+  border-radius: 50%;
+
+  font-family: Open Sans;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 19.07px;
+  text-align: left;
+  color: rgba(255, 255, 255, 1);
+
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  padding: 0 0 3px 1px;
+}
