--- a/src/app/modules/product-page/product-page.module.css
+++ b/src/app/modules/product-page/product-page.module.css
@@ -18,13 +18,14 @@
 .mainImgBlock{
     display: flex; 
     justify-content: center;
-    width: 574px;
+    width: 600px;
     height: 397px;
     background: rgba(255, 255, 255, 1);
     gap: 0px;
     border-radius: 9px;
     border: 1px solid rgba(217, 217, 217, 0.39);
     opacity: 0px;
+    overflow: hidden;
 }
 
 .mainImg{
