Sliders main page

--- a/src/app/modules/product-page/product-page.module.css
+++ b/src/app/modules/product-page/product-page.module.css
@@ -35,3 +35,12 @@
     opacity: 0px;
 
 }
+.swiperBlock{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.left{
+    width: 100%;
+}
