--- a/src/app/pages/test-page.module.css
+++ b/src/app/pages/test-page.module.css
@@ -6,6 +6,16 @@
     margin-bottom: 150px;
 }
 .container{
-    width: 1200px;
+    width: 85px;
+    height: 417px;
+    background-color: #f1eeea;
+}
+.mainContainer{
+    position: relative;
+    width: 85px;
     height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f1eeea;
 }
