--- a/src/index.css
+++ b/src/index.css
@@ -467,6 +467,7 @@ font-weight: 700;
 }
 .temporarily_buy{
   margin-top: 70px;
+  width: 100%;
 }
 
 .card {
@@ -487,6 +488,9 @@ font-weight: 700;
   box-shadow: 5px 6px 16px 10px rgba(42, 42, 42, 0.16);
 }
 .card_text {
+  display: flex;
+  align-items: center;
+  min-height: 60px;
   height: 50px;
   font-family: Trebuchet MS;
 font-size: 16px;
@@ -506,36 +510,71 @@ padding: 0 27px;
 font-size: 21px;
 font-weight: 700;
 margin-bottom: 15px;
+max-height: 30px;
 }
 .card_button {
   margin-bottom: 15px;
 }
 .card_data {
+  width: 85%;
   font-family: Trebuchet MS;
-font-size: 11px;
-font-weight: 400;
+  font-size: 11px;
+  font-weight: 400;
+  height: 18px;
 
-  gap: 23px;
+  /* gap: 23px; */
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .card_data_players {
+  flex-basis: 33%;
+  justify-content: center;
+  height: 100%;
+  font-size: 11px;
+  font-weight: 400;
   display: flex;
   align-items: center;
   gap: 3px;
 }
+.card_data_timer_players{
+  max-width: 18px;
+  max-height: 18px;
+}
 .card_data_timer {
+  flex-basis: 33%;
+  justify-content: center;
   display: flex;
   align-items: center;
   gap: 3px;
+}
+.card_data_timer_img{
+  max-width: 11px;
+  max-height: 13px;
+}
+.card_data_ages{
+  display: flex;
+  flex-basis: 33%;
+  justify-content: center;
+  
+  align-items: center;
 }
 .temporarily_content {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+}
+.temporarily_h2_block{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .temporarily_h2 {
+  display: flex;
+  justify-content: start;
+  width: 1100px;
+
   font-family: Trebuchet MS;
 font-size: 32px;
 font-weight: 700;
@@ -1054,9 +1093,7 @@ font-weight: 700;
   height: 100%;
   object-fit: cover;
 }
-.my_swiper{
-  
-}
+
 
 .my_swiper_slide{
   width: 100%;
@@ -1095,3 +1132,124 @@ font-weight: 700;
 /* :root{
   --swiper-theme-color: black;
 } */
+
+
+/* .swiper {
+  width: 100%;
+  height: 300px;
+  margin: 20px auto;
+} */
+.append-buttons {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.append-buttons button {
+  display: inline-block;
+  cursor: pointer;
+  border: 1px solid #007aff;
+  color: #007aff;
+  text-decoration: none;
+  padding: 4px 10px;
+  border-radius: 4px;
+  margin: 0 10px;
+  font-size: 13px;
+}
+.swiper_slide_100px{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f1eeea;
+}
+
+
+.swiper_slide_85px{
+  background: rgba(255, 255, 255, 1);
+  border: 1px solid rgba(196, 196, 196, 0.6);
+  border-radius: 9px;
+  width: 85px;
+  height: 85px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  padding: 10px;
+  cursor: pointer;
+}
+.swiper_slide_85px_active{
+  background: rgba(255, 255, 255, 1);
+  border: 1px solid rgb(53, 50, 50);
+  border-radius: 9px;
+  width: 85px;
+  height: 85px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.swiper_slide_block{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f1eeea;
+}
+
+.vertical_prev{
+  position: absolute;
+  top: 0;
+  left: 36%;
+}
+.vertical_next{
+  position: absolute;
+  bottom: 0;
+  left: 36%;
+}
+
+.vertical_slider_container{
+  width: 85px;
+  height: 320px;
+  background-color: #f1eeea;
+}
+.vertical_slider_mainContainer{
+  position: relative;
+  width: 85px;
+  height: 397px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f1eeea;
+}
+
+.slider_mainContainer_products{
+  position: relative;
+  width: 1200px;
+  background-color: #f1eeea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slider_container_products{
+  width: 1100px;
+}
+.products_slider_prev{
+  position: absolute;
+  left: 0;
+  top: 47%;
+  z-index: 1000;
+}
+.products_slider_next{
+  position: absolute;
+  right: 0;
+  top: 47%;
+  z-index: 1000;
+}
+.swiper_slide_255px{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
