--- a/src/app/common/components/products-catalog-page/products-catalog-page.module.css
+++ b/src/app/common/components/products-catalog-page/products-catalog-page.module.css
@@ -21,3 +21,36 @@
     text-align: left;
     width: 100%;
 }
+.paginationBlock{
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
+.paginationContent{
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+.paginationItem{
+    color: rgba(42, 42, 42, 1);
+    padding: 0 8px 0 8px;
+    cursor: pointer;
+    font-family: Trebuchet MS;
+    font-size: 19px;
+    font-weight: 700;
+}
+.paginationItem:hover{
+    color: rgba(249, 164, 63, 1);
+}
+.paginationItemActive{
+    border: 1px solid rgba(42, 42, 42, 1);
+    border-radius: 7px;
+}
+.paginationItemActive:hover{
+    color: rgba(42, 42, 42, 1);
+}
+
