--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,18 @@ font-weight: 700;
 .header_top_number:hover {
   color:#F9A43F
 }
+.header_top__blockInputBlock_out{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(42, 42, 42, 0);
+}
+
+.header_top__blockInputBlock{
+  position: relative;
+}
 .header_top__blockInput {
   width: 475px;
   height: 35px;
@@ -89,6 +101,51 @@ font-weight: 700;
   background-color: #FFF;
   display: flex;
   align-items: center;
+}
+.searchProductsBlock{
+  overflow: hidden;
+  box-shadow: 5px 6px 16px 0px rgba(42, 42, 42, 0.16);
+  border-radius: 0 0 9px 9px;
+  padding-top: 5px;
+  width: 100%;  
+  /* height: 500px; */
+  position: absolute;
+  top: 28px;
+  color: #2A2A2A;
+  background-color: #fff;
+  z-index: 10000;
+}
+.searchProductsItem{
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid rgba(42, 42, 42, 0.12);
+  padding: 10px;
+}
+.searchProductsItemNotFound{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+}
+.searchProductsImage{
+  width: 70px;
+  height: 70px;
+}
+.searchProductsTextBlock{
+  margin-left: 20px;
+}
+.searchProductsName{
+  color: #2A2A2A;
+  text-decoration: none;
+}
+.searchProductsName:hover{
+  color: #F9A43F;
+}
+.searchProductsPrice_P{
+  color: #2A2A2A;
+}
+.searchProductsPrice{
+  color: #F9A43F;
 }
 .header_top_input_button{
   display: flex;
@@ -713,6 +770,7 @@ font-weight: 700;
 }
 
 .footer{
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
