--- a/src/app/modules/product-page/product-page.module.css
+++ b/src/app/modules/product-page/product-page.module.css
@@ -1,6 +1,8 @@
 .productPage{
     padding-top: 170px ;
     padding-bottom: 70px;
+    background-color: #f1eeea;
+    
 }
 .mainContainer{
     display: flex;
@@ -20,10 +22,10 @@
     justify-content: center;
     width: 600px;
     height: 397px;
-    background: rgba(255, 255, 255, 1);
+    background-color: #f1eeea;
     gap: 0px;
-    border-radius: 9px;
-    border: 1px solid rgba(217, 217, 217, 0.39);
+    /* border-radius: 9px;
+    border: 1px solid rgba(217, 217, 217, 0.39); */
     opacity: 0px;
     overflow: hidden;
 }
