--- a/src/app/common/components/personal-account-settings/personal-account-settings.module.css
+++ b/src/app/common/components/personal-account-settings/personal-account-settings.module.css
@@ -53,35 +53,7 @@
 }
 
 
-.changeFormBlock{
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(42, 42, 42, 0.7);
-    z-index: 10000;
-}
 
-.changeFormContent{
-    padding: 40px;
-    display: flex;
-    justify-content: center;
-    width: 427px;
-    /* height: 370px; */
-    border-radius: 9px;
-    background: rgba(255, 255, 255, 1);
-    box-shadow: 5px 6px 16px 0px rgba(42, 42, 42, 0.16);
-}
-.changeFormContainer{
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-    width: 100%;
-}
 .changeFormTitle{
     font-size: 22px;
     font-weight: 700;
@@ -114,4 +86,54 @@
 }
 .changeFormInput{
     margin-bottom: 20px;    
+}
+
+
+.question{
+    margin-top: 50px;
+    width: 446px;
+    max-width: 446px;
+}
+
+.questionTitle{
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.questionBlock{
+    
+}
+
+.questionBlockInput{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 14px;
+}
+
+.questionInput{
+    border: 1px solid rgba(42, 42, 42, 0.3);
+    /* width: 445px; */
+    height: 44px;
+    border-radius: 9px;
+    overflow: hidden;
+    padding-left: 10px;
+    font-size: 20px;
+}
+.questionInput:focus{
+    border: 1px solid rgba(42, 42, 42, 1);
+}
+
+.questionInputTextarea{
+    padding-left: 10px;
+    border: 1px solid rgba(42, 42, 42, 0.3);
+    border-radius: 9px;
+    overflow: hidden;
+    min-height: 88px;
+    max-height: 88px;
+    margin-bottom: 20px;
+    resize: none;
+}
+.questionInputTextarea:focus{
+    border: 1px solid rgba(42, 42, 42, 1);
 }
