--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f1eeea;
+  width: 100%;
 }
 button:active, button:focus {
 	outline: none;
@@ -61,6 +62,7 @@ code {
   padding: 15px 0;
 }
 .header_top {
+  padding: 15px 0;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -298,7 +300,7 @@ font-weight: 700;
 }
 .main_container{
   width: 1100px;
-  max-width: 1100px;
+  /* max-width: 1100px; */
 }
 .main_container_bg{
   background-color: #f1eeea;
@@ -309,7 +311,7 @@ font-weight: 700;
 
 .bottom_main_container{
   width: 1100px;
-  max-width: 1100px;
+  /* max-width: 1100px; */
 }
 .bottom_container_bg{
   background:#2A2A2A;
@@ -366,6 +368,12 @@ font-weight: 700;
   margin-top: 150px;
 }
 .header_bottom_container {
+  padding: 15px 0;
+  width: 100%;
+  /* background-color: #f1eeea; */
+   font-family: Trebuchet MS;
+  font-size: 16px;
+  font-weight: 700;
   display: flex;
   justify-content: space-between;
 
@@ -391,21 +399,10 @@ font-weight: 700;
 .header_bottom_catalog:hover {
   color: #F9A43F;
 }
-.header_bottom_nav_item_1:hover{
+.header_bottom_nav_item:hover{
   color: #F9A43F;
 }
-.header_bottom_nav_item_2:hover{
-  color: #F9A43F;
-}
-.header_bottom_nav_item_3:hover{
-  color: #F9A43F;
-}
-.header_bottom_nav_item_4:hover{
-  color: #F9A43F;
-}
-.header_bottom_nav_item_5:hover{
-  color: #F9A43F;
-}
+
 .header_bottom_item_icons{
   display: flex;
   gap: 7px;
@@ -767,11 +764,13 @@ bottom: 0;
 left: 0;
 right: 0;
 
+
 }
 .footer_top{
   padding: 80px 0;
   display: flex;
-  
+
+  /* max-width: 1100px; */
   justify-content: space-between;
   align-items: start;
   font-family: Trebuchet MS;
@@ -800,8 +799,8 @@ right: 0;
   flex-direction: column;
   align-items: center;
   flex-basis: 0;
-  flex-shrink: 1;
-  flex-grow: 1;
+  /* flex-shrink: 1; */
+  /* flex-grow: 1; */
 }
 
 .footer_top_part_1{
