--- a/src/index.css
+++ b/src/index.css
@@ -393,7 +393,7 @@ font-weight: 700;
 .main_page {
   margin-top: 120px;
   padding-top: 70px;
-  position: relative;
+  /* position: relative; */
 }
 
 .header_bottom_catalog:hover {
@@ -867,8 +867,10 @@ align-items: center;
   align-items: end;
 }
 .footer_top_part_5_button{
+  width: 220px;
   margin-bottom: 20px;
-  padding: 15px 35px;
+  /* padding: 15px 50px; */
+  padding: 15px 0;
   border: 1px solid rgba(249, 164, 63, 1);
   border-radius: 9px;
   background-color: rgba(42, 42, 42, 1);
