--- a/src/app/modules/product-page/product-page.module.css
+++ b/src/app/modules/product-page/product-page.module.css
@@ -20,7 +20,8 @@
 .mainImgBlock{
     display: flex; 
     justify-content: center;
-    width: 600px;
+    /* width: 600px; */
+    width: 100%;
     height: 397px;
     background-color: #f1eeea;
     gap: 0px;
