--- a/src/index.css
+++ b/src/index.css
@@ -1472,3 +1472,24 @@ font-weight: 700;
   display: flex;
   justify-content: center;
 }
+
+
+.slider_oneImg{
+  /* width: 100%; */
+  background: rgba(255, 255, 255, 1);
+  width: 530px;
+  height: 355px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(217, 217, 217, 0.39);
+  border-radius: 9px;
+}
+
+.slider_oneImg_img{
+  width: 430px;
+  height: 355px;
+  /* width: 100%; */
+  /* height: 100%; */
+  /* border-radius: 9px; */
+}
