--- a/src/index.css
+++ b/src/index.css
@@ -591,6 +591,7 @@ align-items: center;
 }
 
 .footer_bottom{
+  /* position: relative; */
   display: flex;
   justify-content: center;
   width: 100%;
@@ -604,11 +605,14 @@ align-items: center;
   color: rgba(255, 255, 255, 0.44);
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 .footer_bottom_item{
-  flex-basis: 33%;
   display: flex;
 }
+
+
+
 .footer_bottom_left{
   display: flex;
   flex-direction: column;
