--- a/src/app/modules/admin-page-module/admin-page/admin-page.module.css
+++ b/src/app/modules/admin-page-module/admin-page/admin-page.module.css
@@ -36,7 +36,7 @@
 .modalContainer{
     position: fixed;
     background: #fff;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     /* height: 100vh; */
     width: 550px;
     z-index: 10001;
@@ -49,5 +49,50 @@
     gap: 10px;
 }
 .addProductButton:hover{
+    color: #F9A43F;
+}
+
+.modalBlock{
+    z-index: 10000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    bottom: 0;
+    background: rgba(42, 42, 42, 0.5);
+    display: flex;
+    justify-content: center;
+    padding-top: 120px;
+    font-size: 25px;
+    
+}
+
+.modalContent{
+    position: fixed;
+    background: #fff;
+    width: 550px;
+    z-index: 10001;
+    display: flex;
+    justify-content: center;
+    border-radius: 9px;
+    padding: 20px 0 20px 0;
+}
+
+.adminModalContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.buttonsBlock{
+    display: flex;
+    justify-content: space-around;
+}
+
+.button{
+    background: none;
+}
+
+.button:hover{
     color: #F9A43F;
 }
