--- a/src/app/modules/authorization-module/tabs-authorization-signIn/tabs-authorization-signIn.module.css
+++ b/src/app/modules/authorization-module/tabs-authorization-signIn/tabs-authorization-signIn.module.css
@@ -13,6 +13,25 @@
     border: 1px solid rgba(42, 42, 42, 0.38)
 
 }
+.errorInput {
+    background-color: azure;
+    height: 45px;
+    width: 100%;
+    border-radius: 9px;
+    overflow: hidden;
+    font-family: Trebuchet MS;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    padding-left: 10px;
+    color: rgba(42, 42, 42, 1);
+    border: 1px solid rgb(255, 0, 0)
+}
+
+.errorBlock{
+    color: rgb(255, 0, 0);
+}
+
 .email{
     display: flex;
     flex-direction: column;
