--- a/src/app/modules/catalog-page-module/filter-subcategory/filter-subcategory.module.css
+++ b/src/app/modules/catalog-page-module/filter-subcategory/filter-subcategory.module.css
@@ -5,8 +5,18 @@
     line-height: 33.28px;
     text-align: left;
     text-decoration: none;
-    color: rgba(42, 42, 42, 0.85);
+    color: rgba(42, 42, 42, 1);
 }
 .links:hover{
+    color: #F9A43F;
+}
+
+.linksActive{
+    font-family: Trebuchet MS;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 33.28px;
+    text-align: left;
+    text-decoration: underline;
     color: #F9A43F;
 }
